# verdigris

./: .gitignore  Cargo.toml  Makefile  README.md
platform/macos/VerdigrisCocoaGlue/VerdigrisCocoaGlue/: VEWindow.h  VEWindowHandler.h  VEWindowHandler.m  VerdigrisCocoaGlue-Info.plist
platform/macos/VerdigrisCocoaGlue/VerdigrisCocoaGlue.xcodeproj/: project.pbxproj
platform/macos/libverdigrisglue/libverdigrisglue/: VECursor.h  VECursor.m  VEMouse.h  VEMouse.m  VEWindow.h  VEWindow.m  VEWindowHandler.h  VEWindowHandler.m  VeGL.m  ve_cursor.h  ve_cursor.m  ve_gl.h  ve_gl.m  ve_mouse.h  ve_mouse.m  ve_view.h  ve_view.m  ve_window.h  ve_window.m  ve_window_handler.h  ve_window_handler.m
platform/macos/libverdigrisglue/libverdigrisglue.xcodeproj/: project.pbxproj
platform/macos/libverdigrisglue/libverdigrisglueTests/: libverdigrisglueTests.m
src/: context_settings.rs  cursor.rs  event.rs  gl.rs  inputs.rs  keyboard.rs  lib.rs  mouse.rs  native.rs  verdigris.rs  video_mode.rs  window.rs  window_builder.rs  window_style.rs
src/linux/: mod.rs
src/mac_os/: cocoa_window_style.rs  context_settings.rs  cursor.rs  cursor_impl.rs  ffi.rs  gl.rs  gl_impl.rs  keyboard.rs  mod.rs  mouse.rs  mouse_impl.rs  native_keyboard.rs  window.rs  window_impl.rs  window_mask.rs
src/mac_os/VerdigrisCocoaGlue/VerdigrisCocoaGlue/: VEWindow.m  VEWindowHandler.h  VEWindowHandler.m  VerdigrisCocoaGlue.h  VerdigrisCocoaGlue.m
src/mac_os/VerdigrisCocoaGlue/VerdigrisCocoaGlueTests/: VerdigrisCocoaGlueTests-Info.plist  VerdigrisCocoaGlueTests.m
(+10 files in other folders)
