[package]

name = "verdigris"
version = "0.0.1"
authors = ["Jeremy Letang <letang.jeremy@gmail.com>"]

[[lib]]

name = "verdigris"
crate_type = ["dylib", "rlib"]

[dependencies.objcruntime]
git = "https://github.com/jeremyletang/objcruntime.git"

[dependencies.foundation]
git = "https://github.com/jeremyletang/foundation.git"
